norme su asana e slack

--- a/doc/Interni/Norme_di_progetto/Norme_di_progetto_v_0_0_3.tex
+++ b/doc/Interni/Norme_di_progetto/Norme_di_progetto_v_0_0_3.tex
@@ -51,37 +51,47 @@ Questo documento (interno al gruppo) regolamenta i processi del progetto didatti
 \subsection{Fornitura}
 
 	\subsubsection{Studio di fattibilità}
-	La fase antecedente alla realizzazione del progetto\ped{g} consiste nel fissare delle riunioni in modo che il team\ped{g} possa discutere di esso. Sarà poi compito degli analisti redigere lo \texttt{studio di fattibilità},la cui struttura è specificata a seguire: %inserire struttura studio di fattibilità
+	La fase antecedente alla realizzazione del \gloss{progetto} consiste nel fissare delle riunioni in modo che il \gloss{team} possa discutere di esso. Sarà poi compito degli analisti redigere lo \textit{studio di fattibilità}, la cui struttura è specificata a seguire: %inserire struttura studio di fattibilità
 
 \subsection{Sviluppo}
 	\subsubsection{Analisi dei requisiti}
-	Sarà sempre compito degli analisti al termine dello studio di fattibilità di produrre l'\texttt{analisi dei requisiti}.Questo documento conterrà i requisiti raccolti ed i casi uso individuati nelle riunioni svolte.
+	Sarà sempre compito degli analisti al termine dello studio di fattibilità di produrre l'\textit{analisi dei requisiti}. Questo documento conterrà i requisiti raccolti ed i casi uso individuati nelle riunioni svolte.
 	Viene elencata nelle sezioni a seguire la struttura obbligatoria di requisiti e casi d'uso.
 		\paragraph{Requisiti}%da guardare come esporta pragmadb e nel caso correggere
-		Dopo aver inviduato i requisiti tramite le varie riunioni,è compito degli analisti redarrne un elenco che dovrà seguire la seguente struttura:
+		Dopo aver individuato i requisiti tramite le varie riunioni, è compito degli analisti redarne un elenco con la seguente struttura:
+		
 		\centerline{R[Importanza][Tipo][ID]}
+		%ma come sono allineati?
 		\begin{itemize}
+		
 			\item[Importanza]: indica se il requisito è:
+			
 			\begin{itemize}
 				\item obbligatorio:
 				\item opzionale;
 				\item desiderabile.
 			\end{itemize}
-			\item[Tipo]: indica il tipo del requisito che puà essere:
+			
+			\item[Tipo]: indica il tipo del requisito che può essere:
+			
 			\begin{itemize}
 				\item F: funzionale;
 				\item Q: di qualità;
 				\item P: prestazionale;
 				\item V: di vincolo.
 			\end{itemize}
-			\item [ID] codice identificativo univoco del requisito.
+			
+			\item [ID]: codice identificativo univoco del requisito.
+			
 		\end{itemize}
+		
 	    Un requisito ha inoltre specificato:
 		\begin{itemize}
 		\item una breve descrizione di esso;
 		\item un requisito padre se presente;
 		\item la fonte da cui deriva;
 		\item se è stato effettivamente implementato.
+		\end{itemize}
 		\paragraph{Casi d'uso}
 		Ogni caso d'uso viene identificato nel seguente modo:
 		\centerline{UCx}
@@ -100,10 +110,10 @@ Questo documento (interno al gruppo) regolamenta i processi del progetto didatti
 		\end{itemize}
 	\subsubsection{Progettazione}
 	Il compito dei progettisti consiste di progettare l'architettura del software. % da completare.
-	La fase di progettazione deve utilizzare come diagrammi \gloss{UML} quelli sotto descritti,in riferimento allo standard uml 2.0:
+	La fase di progettazione deve utilizzare come diagrammi \gloss{UML} quelli sotto descritti,in riferimento allo standard UML 2.0:
 	\begin{itemize}
 		\item \gloss{Diagrammi delle classi}:descrivono i tipi di entità(classi) e le relazioni tra loro.
-		\item \gloss{Diagrammi dei package}:raggruppa un numero di elementi uml in una sola unità di livello più alto.
+		\item \gloss{Diagrammi dei package}:raggruppa un numero di elementi UML in una sola unità di livello più alto.
 		\item \gloss{Diagrammi di attività}:descrive in dettaglio un algoritmo
 		\item \gloss{Diagrammi di sequenza}:descrive uno scenario,dove le azioni sono disposte in sequenza e le varie scelte sono già state prese.
 		\end{itemize}
@@ -112,7 +122,7 @@ Questo documento (interno al gruppo) regolamenta i processi del progetto didatti
 		\paragraph{Formattazione del codice}
 		Per standardizzare il codice scritto dai vari programmatori è necessario rispettare i seguenti punti:
 			\begin{itemize}
-				\item i nomi di variabili,classi,funzioni e metodi sono scritti in inglese;
+				\item i nomi di variabili, classi, funzioni e metodi sono scritti in inglese;
 				\item i nomi composti dovranno avere la prima lettera minuscola e la lettera maiuscola ad ogni iniziale della nuova parola che compone il nome.
 				\item è opportuno scegliere il nome dei vari elementi in modo coerente con la loro funzione;
 				
@@ -124,16 +134,16 @@ Questo documento (interno al gruppo) regolamenta i processi del progetto didatti
 			\item Ogni commento dovrà essere relativo alla parte di codice interessata;
 			\item Ogni commento dovrà descrivere in modo breve ma preciso la parte di codice interessata;
 			\item È opportuno usare frasi di senso compiuto in modo da essere più chiari possibili;
-			\item È preferibile commentari sopra una riga di codice anziché alla fine di essa per una miglior facilità di lettura,
+			\item È preferibile commentare sopra una riga di codice anziché alla fine di essa per una miglior facilità di lettura,
 			\item Evitare di usare troppi simboli per separare i commenti. Lasciare invece uno spazio vuoto per separarli dal codice;
-			\item Nel caso i commenti facciano parte anche della documentazione seguire le linee guida di jdoc(https://github.com/jsdoc3/jsdoc) %nel caso javascript
+			\item Nel caso i commenti facciano parte anche della documentazione seguire le linee guida di jdoc (https://github.com/jsdoc3/jsdoc) %nel caso javascript
 		\end{itemize}
 	\subsubsection{Strumenti}
 		\paragraph{PragmaDB}
-		Per tenere traccia dei casi d'uso e dei requisiti il team ha scelto di usare PragmaDB(https://github.com/StefanoMunari/PragmaDB) creato da studenti degli anni passati. Il programma è accessibile via browser ed è possibile usarlo collegandosi al server creato dal team tramite autenticazione. Inoltre permette l'esportazione in \LaTeX{} delle varie tabelle(requisiti,glossario,...) seguendo le linee guida di struttura descritte in questo documento.
+		Per tenere traccia dei casi d'uso e dei requisiti il team ha scelto di usare PragmaDB (https://github.com/StefanoMunari/PragmaDB) creato da studenti degli anni passati. Il programma è accessibile via browser ed è possibile usarlo collegandosi al server creato dal team tramite autenticazione. Inoltre permette l'esportazione in \LaTeX{} delle varie tabelle(requisiti,glossario,...) seguendo le linee guida di struttura descritte in questo documento.
 		\paragraph{Astah}
-		L'editor \gloss{uml} utilizzato è Astah,creato daChange Vision e disponibile gratuitamente online. Supporta la generazione di tutti i diagrammi che vengono usati dal team(classi,attività,sequenza e package).
-		\paragraph{Ide ancora da scegliere}
+		L'editor \gloss{UML} utilizzato è \gloss{Astah}, creato da \textit{ChangeVision} e disponibile gratuitamente online. Supporta la generazione di tutti i diagrammi che vengono usati dal team(classi, attività, sequenza e package).
+		\paragraph{IDE ancora da scegliere}
 	\subsubsection{Tecnologie utilizzate}
 	\paragraph{HTML5}
 	L'\gloss{html5} è un linguaggio di markup utilizzato per strutturare pagine web. Porta con se molte caratteristiche nuove rispetto al suo predecessore volte soprattutto a separare struttura, stile e contenuti, oltre a nuovi elementi che permettono di creare un sito web molto potente.
@@ -198,6 +208,7 @@ Riportiamo qui di seguito le norme che riguardano lo sviluppo della documentazio
 
 \subsubsection{Termini del glossario} All'interno di una sezione, la prima occorrenza di un termine che si trovi nel glossario dev'essere evidenziata e segnata con un pedice (\gloss{[termine in glossario]}) tramite la macro \texttt{\textbackslash gloss\{termine\}}, in modo da far capire che si trova nel glossario.
 
+%manuale in inglese? seriamente? 
 \subsubsection{Grammatica e tipografia} Tutti i documenti vanno redatti in italiano. Il manuale utente viene anche tradotto in inglese, data la natura open-source del progetto. I documenti in italiano osservano le usuali regole grammaticali italiane, tra cui evidenziamo:
 \begin{itemize}
 	\item La punteggiatura è seguita ma non preceduta da uno spazio.
@@ -209,13 +220,13 @@ L'evidenziazione di un termine va fatta con \texttt{\textbackslash emph\{\}}. Og
 \subsubsection{Colori} Andrebbe minimizzato l'uso di colori, al fine di evitare ambiguità nel caso un documento venga stampato in bassa qualità.
 
 \subsection{Configurazione} \label{sec:config}
-Per gestire la configurazione del software si è scelto di utilizzare il sistema \gloss{Git}, appoggiandoci per questo alla piattaforma \gloss{Github}. Abbiamo scelto Github non solo per la qualità del servizio fornito ma anche per la natura open-source del progetto \proj, che ci abilitava ad usare questa piattaforma gratuitamente. Il \gloss{repository} creato all'indirizzo \repo{} si divide nelle seguenti directory:
+Per gestire la configurazione del software si è scelto di utilizzare il sistema \gloss{Git}, appoggiandoci per questo alla piattaforma \gloss{Github}. Abbiamo scelto Github non solo per la qualità del servizio fornito ma anche per la natura open-source del progetto \proj, che ci abilita ad usare questa piattaforma gratuitamente. Il \gloss{repository} creato all'indirizzo \repo{} si divide nelle seguenti directory:
 \begin{description}
 	\item[\texttt{doc}] per la documentazione;
 	\item[\texttt{src}] per il codice sorgente.
 \end{description}
 
-\subsubsection{Branching} La vita di un \gloss{branch} (ramo) sottosta alle seguenti regole:
+\subsubsection{Branching} La vita di un \gloss{branch} (ramo) è vincolata alle seguenti regole:
 \begin{itemize}
 	\item Il ramo \texttt{master} contiene solo elementi della configurazione approvati dal responsabile di progetto.
 	\item Il ramo \texttt{doc}, figlio di \texttt{master}, contiene documentazione non ancora approvata dal responsabile di progetto.
@@ -239,5 +250,160 @@ Per gestire la configurazione del software si è scelto di utilizzare il sistema
 \subsection{Gestione organizzativa}
 
 \subsection{Formazione}
+
+\subsection{Ambiente di sviluppo} 
+
+\subsubsection{Pianificazione}
+
+%non saprei come suddividerlo bene in paragrafi
+La pianificazione di progetto è uno dei compiti del Responsabile di progetto. è chiaro che non è possibile affidarsi ad un foglio di calcolo per una attività così estesa, per i seguenti motivi:
+
+\begin{itemize}
+\item L'attività di pianificazione deve poter essere modificata da ogni Responsabile di Progetto;
+\item è necessario tracciare le ore-persona assegnate ad ogni singolo task e come esse sono ripartite tra i vari membri del team;
+\item è desiderabile avere una schermata automatica contenente tutti le ore di lavoro assegnate ad ogni persona durante tutta la durata del progetto
+\item è desiderabile poter visualizzare come le stime differiscano dal lavoro effettivamente svolto.
+\end{itemize}
+
+Inizialmente è stata rivolta attenzione a Trello accoppiato ad un servizio esterno chiamato EleGantt; tuttavia nel suo uso iniziale sono sorte diverse criticità:
+
+\begin{itemize}
+\item Principalmente, la \textbf{mancanza di struttura} che dovrebbe permettere a Trello un lavoro più agile si è rivelata inefficace in fase di pianificazione;
+\item Lo strumento EleGantt, usato per stendere dei diagrammi di Gantt (non nativi nella piattaforma) era troppo limitato nella sua versione free. Sono stati valutati altri strumenti ma non offrivano funzionalità chiave per la pianificazione efficace del progetto.
+\end{itemize}
+
+è stata rivolta dunque attenzione ai servizi offerti da Asana, accoppiato ad InstaGantt, un servizio esterno molto ben integrato ad Asana.
+
+Questa piattaforma offre queste principali funzionalità:
+\paragraph{Creazione di \gloss{task}} 
+È possibile indicarne:
+\begin{itemize}
+\item [Nome]: ogni task e sottotask dovrà avere un nome univoco per poter essere meglio tracciato;
+\item [Descrizione]: è possibile allegare una descrizione, dei file e dei riferimenti che non necessitano tracciamento da \gloss{Git};
+\item [Persona assegnata]: ogni task può avere al massimo una persona assegnata, secondo il principio \gloss{DRI};
+\item Data di completamento prevista;
+\item Data di inizio prevista (da InstaGantt);
+\item [Sottotask]: qualora il task non possa essere assegnato esclusivamente ad una persona, ma richiede una collaborazione, si spezza il lavoro in frammenti più contenuti, chiamati sottotask. Questi sottotask possono avere a loro volta sottotask ulteriori.
+
+L'obiettivo di questa suddivisione è raggiungere una corretta \gloss{WBS}, il più possibile quantificabile;
+\item [Dipendenze tra task (da InstaGantt)]: ogni task può necessitare il completamento di un altro task per poterlo iniziare;
+\item Ore previste (da InstaGantt);
+\item Ore effettive (da InstaGantt);
+\item Tag.
+\end{itemize}
+
+\paragraph{Organizzazione dei task} Si è adottato il modello Board: esso permette di raggruppare i task in colonne, in modo da avere una visione immediata dello stato di ogni documento o codice che è necessario produrre.
+Attualmente sono state create le seguenti colonne:
+
+\begin{itemize}
+\item [Milestone]: contiene le milestone decise dal \gloss{team} e quelle obbligatorie, definite dal \TV;
+\item [Ambiente di sviluppo]: contiene dei task assegnati per indagare i migliori strumenti di sviluppo che sono stati adottati dal \gloss{team};
+\item [Analisi dei Requisiti]: documento richiesto;
+\item [Piano di Qualifica]: documento richiesto;
+\item [Piano di Progetto]: documento richiesto;
+\item [Studio di Fattibilità]: documento richiesto;
+\item [Norme di Progetto]: documento richiesto;
+\item [Riunioni]: contiene informazioni su ogni riunione (data, problematiche emerse);
+\item [Glossario]: documento richiesto;
+\item [Varie]: task minori che non possono essere rendicontati, solitamente a durata minore di un'ora;
+\item [Completamento Revisioni]: contiene le date nelle quali si hanno incontri con il \TV al fine di avanzare con le varie revisioni; 
+\item [Definizione di Prodotto]: documento richiesto;
+\item [Specifica Tecnica]: documento richiesto;
+\item [Codifica]: attività di codifica da effettuare;
+\item [Manuale Utente]: documento richiesto;
+\item [Test di sistema]: attività di verifica da effettuare.
+\end{itemize}
+
+\paragraph{Diagrammi di pianificazione}
+InstaGantt permette di visualizzare i vari task in un asse temporale, producendo così un \gloss{diagramma di Gantt}. 
+Sono state scelte le seguenti convenzioni:
+\begin{itemize}
+\item Ogni nome di ogni task o sottotask deve essere univoco. Per alcuni task ripetuti, come ad esempio l'incremento di un certo documento, si inserisce in coda la revisione che lo richiede (es: Incremento Piano di Qualifica [RP] significa che il Piano di Qualifica è stato incrementato a causa della deadline della Revisione di Progettazione di \TV.)
+\item Ogni task di livello più basso deve essere contrassegnato da un tag che sancisce il ruolo che una persona per quel task adotta: questi ruoli sono chiamati:
+\begin{itemize}
+\item Amministratore;
+\item Analista;
+\item Progettista;
+\item Programmatore;
+\item Responsabile di Progetto;
+\item Verificatore.
+\end{itemize}
+
+Questi ruoli sono identici a quelli definiti nel [Piano di Progetto];
+
+\item Ogni task di livello superiore che produce un documento possiede il tag \texttt{Documento}. Questo task è assegnato all'utente virtuale \texttt{Hivex Team};
+
+\item I vari cicli di incremento sono stati pianificati come task appartenenti allo stesso livello;
+\end{itemize}
+
+Molto interessante è la sezione \textit{Workload} in InstaGantt.
+Essa permette di visualizzare i vari task assegnati ad ogni persona in modo da analizzare il quantitativo di ore di lavoro impiegato giornalmente, con la possibilità di filtrarlo per ruolo, attraverso l'uso dei tag.
+In questo modo è possibile:
+\begin{itemize}
+\item Avere una visione di massima del lavoro svolto da ciascuno;
+\item Riallocare task assegnati in caso di indisposizione di uno dei membri;
+\item Controllare la presenza di task non assegnati.
+\end{itemize}
+
+Infine sarà compito del \gloss{Responsabile di Progetto} salvare una \textit{baseline} del progetto ad ogni milestone raggiunta: in questo modo sarà possibile confrontare il lavoro pianificato con quello effettivamente svolto e stilare il consultivo.
+
+Non si ritiene inoltre che i diagrammi \gloss{PERT} possano essere efficaci per una rappresentazione immediata dei rischi della pianificazione. Si preferisce indicare solamente i diagrammi \gloss{Gantt} con le relative date effettive di completamento.
+
+\subsubsection{Comunicazione inter-team} 
+
+Una comunicazione tra i membri del team è essenziale per la buona riuscita di ogni progetto.
+
+Il \gloss{team} ritiene che un buon sistema di comunicazione debba possedere le seguenti caratteristiche:
+
+\begin{itemize}
+\item Invio e ricezione istantanea di messaggi;
+\item Storico dei messaggi inviati;
+\item Possibilità di avere notifiche \gloss{push} sia in ambiente desktop che smartphone;
+\item Comunicazione tra tutti i membri del team.
+\end{itemize}
+
+Tra i prodotti valutati, la scelta è ricaduta su \gloss{Slack}, una piattaforma di comunicazione pensata appositamente per team di lavoro, in grado di soddisfare ampiamente le richieste sopra elencate.
+
+Tra le features offerte più interessanti si trova:
+
+\begin{itemize}
+\item Suddivisione delle conversazioni del team in canali;
+\item Messaggi privati tra due utenti;
+\item Chiamate tra i membri del team; 
+\item Condivisione file tramite drag and drop;
+\item Presenza di app per smartphone e desktop;
+\item Integrazione con servizi esterni.
+\end{itemize}
+
+\paragraph{Canali}
+La possibilità di suddividere le conversazioni in canali è molto potente ma è stato subito riscontrato essere potenzialmente molto dispersiva. Infatti avere troppi canali porta a riversare tutta la comunicazione sul canale principale, intasandolo e rendendo la lettura dello storico più complicata.
+
+Sono stati quindi previsti i seguenti canali, con i seguenti scopi:
+
+\begin{itemize}
+\item [\#documents] Come strutturare i documenti, problematiche relative all'uso di \LaTeX{};
+\item [\#feasibility] Discussione sulla fattibilità dei capitolati;
+\item [\#general] Annunci e comunicazioni riguardanti l'intero team;
+\item [\#github] Problematiche nell'uso di git, integrazione con GitHub (vedi prossimo paragrafo);
+\item [\#meta] Strutturazione canali di Slack;
+\item [\#project-planning] Pianificazione del team;
+\item [\#random] Discussioni non inerenti al progetto;
+\item [\#requirements] Problematiche su requisiti e sull'utilizzo di \gloss{PragmaDB}
+\item [\#test-slack] Canale di prova;
+\end{itemize}
+
+Si ritiene che il numero massimo di canali gestibili senza dispersione sia pari a tre volte il numero di componenti del team. La creazione di canali ulteriori è possibile previa archiviazione di canali non più utilizzati. 
+
+\paragraph{Integrazione con GitHub}
+Slack dispone, nella sua versione free, l'integrazione di un massimo di 10 servizi esterni.
+
+Un servizio che si è rivelato davvero utile è stato l'integrazione con GitHub: questa crea un bot, inserito nel canale \#github, il quale invierà notifiche di \gloss{commit}, \gloss{pull request}, e attività nei \gloss{GitHub Issues}.
+
+\paragraph{Integrazione con Asana}
+Un altro servizio offerto blablabala
+Quindi è stato deciso di non integrare Asana con Slack.
+
+
+
 
 \end{document}
