aggiornamento verbali e PdP

--- a/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_0_0_0.tex
+++ b/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_0_0_0.tex
@@ -1,9 +1,7 @@
 % Piano di Qualifica
 % da compilare con il comando pdflatex Piano_di_Qualifica_x.x.x.tex
 
-\input{../util/hx-ambiente}
-\usepackage{hyperref}
-\hypersetup{hidelinks}
+\input{../../util/hx-ambiente}
 
 \version{0.0.0}
 \creaz{28 dicembre 2016}
