--- a/doc/Esterni/Verbali/Verbali.tex
+++ b/doc/Esterni/Verbali/Verbali.tex
@@ -15,26 +15,24 @@
 
 \maketitle
 
-
-
 \section{Riunione del 29 novembre 2016}
 
 \begin{itemize}
 	\item \textbf{Orario}: 13:30 - 15:30;
 	\item \textbf{Durata}: 2 ore;
 	\item \textbf{Luogo incontro}: Aula 1C150 di Torre Archimede; 
-	\item \textbf{Oggetto}: scelta del nome e del logo per il gruppo, scelta del capitolato d' appalto, degli strumenti per l'organizzazione e il versionamento che si andranno a utilizzare e definizione dei ruoli;
+	\item \textbf{Oggetto}: scelta del nome e del logo per il gruppo, scelta del capitolato d'appalto, degli strumenti per l'organizzazione e il versionamento che si andranno a utilizzare e definizione dei ruoli;
 	\item \textbf{Segretario}: \LB; 
 	\item \textbf{Partecipanti}: \AZ, \GG, \LB, \LS, \MM, \PB.
 \end{itemize}
 
 Durante la riunione sono state prese le seguenti decisioni:
-il nome e il logo del gruppo e dopo varie proposte è stato scelto all 'unanimità il nome \textit{Hivex}, dall 'inglese \textit{hive} (la casetta delle api), dato che il nostro gruppo si compone di sei persone tante quanti i lati dell'esagono; inoltre Francis Bacon scriveva, nel \textit{Novum Organum},
+il nome e il logo del gruppo e dopo varie proposte è stato scelto all'unanimità il nome \emph{Hivex}, dall'inglese \emph{hive} (la casetta delle api), dato che il nostro gruppo si compone di sei persone tante quanti i lati dell'esagono; inoltre Francis Bacon scriveva, nel \emph{Novum Organum},
 \begin{quote}
 	The men of experiment are like the ant, they only collect and use; the reasoners resemble spiders, who make cobwebs out of their own substance. But the bee takes the middle course, it gathers its material from the flowers of the garden and field, but transforms and digests it by a power of its own.
 \end{quote}
 
-Si è scelto il capitolato C6 “SWEDesigner” proposto dall'azienda \ZU e """”si è discusso su come distribuire i ruoli ai vari componenti del gruppo.
+Si è scelto il capitolato C6 \proj{} proposto dall'azienda \ZU{} e si è discusso su come distribuire i ruoli ai vari componenti del gruppo.
 Infine abbiamo scelto gli strumenti che verranno utilizzati per l'organizzazione e il versionamento: più in particolare come strumento di organizzazione abbiamo scelto di utilizzare \gloss{Asana} in quanto offre, per esempio, l'integrazione con \gloss{Slack} e si è reso necessario integrare questo strumento ad \gloss{Instagantt}, allo scopo di visualizzare in maniera immediata tramite il \gloss{Diagramma di Gantt} tutti i task inseriti in \gloss{Asana}. Prima di scegliere Asana avevamo rivolto la nostra attenzione a \gloss{Trello} ma durante l'analisi delle features offerte sono sorte varie criticità. Per la comunicazione abbiamo scelto di utilizzare \gloss{Slack}: esso permette la suddivisione in diversi canali e l'integrazione di diversi servizi, come l'interfacciamento ai servizi di \gloss{Asana}. Per quanto riguarda il versionamento, abbiamo scelto di utilizzare  \gloss{GitHub} perchè offre un ottimo servizio gratuitamente.
 
 
@@ -62,12 +60,12 @@ Sono state scelte le domande da proporre circa la definizione dei requisiti del 
 	\item \textbf{Orario}: 14:30 - 17:00;
 	\item \textbf{Durata}: 2 ore 30 minuti;
 	\item \textbf{Luogo incontro}: \ZU, sede di via Cittadella 7, Padova; 
-	\item \textbf{Oggetto}: discussione del capitolato d' appalto;
+	\item \textbf{Oggetto}: discussione del capitolato d'appalto;
 	\item \textbf{Segretario}: \LS; 
 	\item \textbf{Partecipanti}: \GP, \AZ, \GG, \LB, \LS, \MM, \PB.
 \end{itemize}
 
-Durante la riunione sono state discusse alcune scelte prese dal gruppo riguardanti le potenzialità del software e suggerite altre di nuove. Abbiamo compreso che il dominio di programmi software che il nostro editor dovrà modellare dev' essere mirato ad un particolare ambiente applicativo. Sono stati chiariti alcuni dubbi e il proponente ha lasciato ampia libertà sul linguaggio da usare e sulla natura del software (applicazione web o desktop).
+Durante la riunione sono state discusse alcune scelte prese dal gruppo riguardanti le potenzialità del software e suggerite altre di nuove. Abbiamo compreso che il dominio di programmi software che il nostro editor dovrà modellare dev'essere mirato ad un particolare ambiente applicativo. Sono stati chiariti alcuni dubbi e il proponente ha lasciato ampia libertà sul linguaggio da usare e sulla natura del software (applicazione web o desktop).
 
 
 
@@ -77,13 +75,13 @@ Durante la riunione sono state discusse alcune scelte prese dal gruppo riguardan
 	\item \textbf{Orario}: 14:30 - 17:00;
 	\item \textbf{Durata}: 2 ore 30 minuti;
 	\item \textbf{Luogo incontro}: Aula P4 Paolotti; 
-	\item \textbf{Oggetto}: scelta del dominio applicativo e analisi dei casi d' uso generali;
+	\item \textbf{Oggetto}: scelta del dominio applicativo e analisi dei casi d'uso generali;
 	\item \textbf{Segretario}: \PB; 
 	\item \textbf{Partecipanti}: \AZ, \GG, \LB, \LS, \MM, \PB.
 \end{itemize}
 
 Durante la riunione è stato scelto di realizzare una webapp con \gloss{HTML5},\gloss{CSS3} e JavaScript per il \gloss{lato client} che genera codice \gloss{Java} e dopo varie proposte il dominio applicativo del software da realizzare è risultato "giochi da tavolo". 
-Sono stati analizzati i casi d' uso generali che hanno fatto sorgere domande esposte il giorno seguente al \GP.
+Sono stati analizzati i casi d'uso generali che hanno fatto sorgere domande esposte il giorno seguente al \GP.
 
 
 
@@ -93,7 +91,7 @@ Sono stati analizzati i casi d' uso generali che hanno fatto sorgere domande esp
 	\item \textbf{Orario}: 14:30 - 16:00;
 	\item \textbf{Durata}: 1 ore 30 minuti;
 	\item \textbf{Luogo incontro}: \ZU, sede di via Cittadella 7, Padova; 
-	\item \textbf{Oggetto}: discussione del capitolato d' appalto;
+	\item \textbf{Oggetto}: discussione del capitolato d'appalto;
 	\item \textbf{Segretario}: \AZ; 
 	\item \textbf{Partecipanti}: \GP, \AZ, \GG, \LB, \LS, \MM, \PB.
 \end{itemize}
@@ -108,12 +106,12 @@ Durante la riunione è stato chiarito il concetto di stereotipo e dove poter uti
 	\item \textbf{Orario}: 11:30 - 13:30;
 	\item \textbf{Durata}: 2 ore;
 	\item \textbf{Luogo incontro}: 2AB45 di Torre Archimede; 
-	\item \textbf{Oggetto}: discussione dei casi d' uso;
+	\item \textbf{Oggetto}: discussione dei casi d'uso;
 	\item \textbf{Segretario}: \PB; 
 	\item \textbf{Partecipanti}: \AZ, \GG, \LB, \LS, \MM, \PB.
 \end{itemize}
 
-Durante la riunione sono stati analizzati una parte dei casi d' uso e dei requisiti sorti dalla riunione precedente col proponente.
+Durante la riunione sono stati analizzati una parte dei casi d'uso e dei requisiti sorti dalla riunione precedente col proponente.
 
 
 \section{Riunione del 23 dicembre 2016}
@@ -122,10 +120,23 @@ Durante la riunione sono stati analizzati una parte dei casi d' uso e dei requis
 	\item \textbf{Orario}: 15:00 - 18:00;
 	\item \textbf{Durata}: 3 ore;
 	\item \textbf{Luogo incontro}: 2AB45 di Torre Archimede; 
-	\item \textbf{Oggetto}: discussione dei casi d' uso;
+	\item \textbf{Oggetto}: discussione dei casi d'uso;
 	\item \textbf{Segretario}: \PB; 
 	\item \textbf{Partecipanti}: \AZ, \GG, \LB, \LS, \MM, \PB.
 \end{itemize}
 
-Durante la riunione sono stati analizzati i casi d' uso, in particolar modo riguardo la parte del diagramma delle attività.
+Durante la riunione sono stati analizzati i casi d'uso, in particolar modo riguardo la parte del diagramma delle attività.
+
+\section{Riunione del 02 gennaio 2017}
+
+\begin{itemize}
+	\item \textbf{Orario}: 09:30 - 13:30;
+	\item \textbf{Durata}: 4 ore;
+	\item \textbf{Luogo incontro}: abitazione di Paolo Baracco; 
+	\item \textbf{Oggetto}: discussione dei requisiti, linguaggio da utilizzare lato server, progresso documentazione, modifiche PragmaDB;
+	\item \textbf{Segretario}: \PB; 
+	\item \textbf{Partecipanti}: \AZ, \GG, \LB, \LS, \MM, \PB.
+\end{itemize}
+
+Durante la riunione sono stati esposti i progressi sulla documentazione da tutti i membri del gruppo. Dopo ciò, è stato deciso di utilizzare \gloss{Java} come linguaggio di programmazione per il \gloss{lato server} dell'applicativo da realizzare ed infine, sono stati analizzati tutti i requisiti da inserire nell'\AdR{} e le modifiche da apportare alla parte \gloss{PHP} di \gloss{PragmaDB} sull'esportazione del \Glossario.
 \end{document}
